--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-asgiref==3.8.1
 bcrypt==4.2.0
-distlib==0.3.8
-filelock==3.16.1
+greenlet==3.1.1
 mysql-connector-python==9.0.0
-platformdirs==4.3.6
-PySide6==6.7.2
-PySide6_Addons==6.7.2
-PySide6_Essentials==6.7.2
-shiboken6==6.7.2
-sqlparse==0.5.0
-tzdata==2024.1
+PySide6==6.7.3
+PySide6_Addons==6.7.3
+PySide6_Essentials==6.7.3
+shiboken6==6.7.3
+SQLAlchemy==2.0.35
+typing_extensions==4.12.2
