--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-bcrypt==4.2.0
-mysql-connector-python==9.0.0
-PySide6==6.7.3
-SQLAlchemy==2.0.35
+bcrypt>=4.2.0
+mysql-connector-python>=9.0.0
+PySide6>=6.7.3
+SQLAlchemy>=2.0.35
 
