--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-bcrypt
-mysql-connector-python
-PySide6
-requests
-fpdf
-python-docx
-pandas
-openpyxl
+bcrypt==4.3.0
+mysql-connector-python==9.3.0
+PySide6==6.9.0
+PySide6_Addons==6.9.0
+PySide6_Essentials==6.9.0
+shiboken6==6.9.0
