--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-bcrypt
-mysql-connector-python
-PySide6
-requests
-fpdf
-python-docx
-pandas
-openpyxl
+bcrypt==4.3.0
+fpdf==1.7.2
+locust==2.37.10
+mysql-connector-python==9.2.0
+openpyxl==3.1.5
+pyinstaller==6.13.0
+PySide6==6.8.3
+pytest==8.4.0
+pytest-cov==6.1.1
+pytest-mock==3.14.1
+pytest-qt==4.4.0
+python-docx==1.1.2
+pyzk==0.9
+
