--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,50 +1,32 @@
-# .github/workflows/python-app.yml
-name: Python application CI/CD
+name: Pruebas Python
 
 on:
   push:
-    branches: [ "main"] # Se dispara en push a las ramas main o develop
-  pull_request:
-    branches: [ "main"] # Se dispara en PRs a las ramas main o develop
+    branches:
+      #- main     # Si aún quieres que se ejecute en main
+      - gonzalo  # ¡Añade tu rama aquí!
+
+  # pull_request:  # Opción 1: Eliminar completamente la sección pull_request
+  #   branches:
+  #     - main
+  #     - gonzalo
 
 jobs:
-  build: # Nombre del job
-    runs-on: ubuntu-latest # El runner
-
-    strategy:
-      matrix:
-        python-version: ["3.12"]
+  build:
+    runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4 # Paso 1: Clona el repositorio en el runner
-
-    - name: Set up Python ${{ matrix.python-version }} # Paso 2: Configura el entorno Python
+    - uses: actions/checkout@v4
+    - name: Configurar Python
       uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: 'pip' # Opcional: Cachea las dependencias de pip para acelerar futuras ejecuciones.
+        python-version: '3.12' # Asegúrate de que sea la versión correcta
 
-    - name: Install dependencies # Paso 3: Instala las dependencias del proyecto y herramientas de testing
+    - name: Instalar dependencias
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip install pytest pytest-cov
-
-    - name: Run tests with pytest # Paso 4: Ejecuta Pytest
+    - name: Ejecutar Tests con Pytest
       run: |
-        export PYTHONPATH=$PYTHONPATH:$(pwd)/src
-        pytest --junitxml=test-results.xml --cov=./src --cov-report=xml
-
-    - name: Publish Test Results # Paso 5 (Opcional): Publica los resultados de los tests en GitHub
-      if: always() # Asegura que este paso se ejecute incluso si las pruebas fallan
-      uses: EnricoMi/publish-unit-test-result-action@v2
-      with:
-        files: test-results.xml # Usa el archivo generado por Pytest
-
-    - name: Upload coverage to Codecov # Paso 6 (Opcional): Sube el reporte de cobertura a Codecov (si lo usas)
-      if: success() # Solo si las pruebas pasaron
-      uses: codecov/codecov-action@v4
-      with:
-        files: ./coverage.xml # Archivo generado por pytest-cov
-        # token: ${{ secrets.CODECOV_TOKEN }} # Si necesitas un token, configúralo en secrets de GitHub
+        pytest src\test_perfil_acceso.py # Asegúrate de la ruta correcta a tu archivo de test
