--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,13 +3,10 @@ name: Pruebas Python
 on:
   push:
     branches:
-      - main     # Si aún quieres que se ejecute en main
-      - gonzalo  # ¡Añade tu rama aquí!
+      - main
+      - gonzalo
 
-  # pull_request:  # Opción 1: Eliminar completamente la sección pull_request
-  #   branches:
-  #     - main
-  #     - gonzalo
+
   workflow_dispatch: {} 
 
 jobs:
