--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: '3.12'
+    - name: Instalar dependencias del sistema para GUI
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgl1-mesa-glx
 
     - name: Instalar dependencias
       run: |
