--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,72 @@
+bandit==1.8.3
 bcrypt==4.3.0
+bidict==0.23.1
+blinker==1.9.0
+Brotli==1.1.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+ConfigArgParse==1.7.1
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-Login==0.6.3
+fpdf==1.7.2
+future==1.0.0
+gevent==25.5.1
+geventhttpclient==2.3.3
+greenlet==3.2.3
+h11==0.16.0
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+locust==2.37.10
+locust-cloud==1.23.1
+lxml==5.4.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+msgpack==1.1.0
 mysql-connector-python==9.3.0
+numpy==2.2.6
+packaging==25.0
+pandas==2.2.3
+pbr==6.1.1
+platformdirs==4.3.8
+pluggy==1.6.0
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pycparser==2.22
+Pygments==2.19.1
 PySide6==6.9.0
 PySide6_Addons==6.9.0
 PySide6_Essentials==6.9.0
+pytest==8.4.0
+pytest-benchmark==5.1.0
+pytest-mock==3.14.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-engineio==4.12.2
+python-socketio==5.13.0
+pytz==2025.2
+pywin32==310
+PyYAML==6.0.2
+pyzk==0.9
+pyzmq==26.4.0
+requests==2.32.3
+rich==14.0.0
+setuptools==80.9.0
 shiboken6==6.9.0
+simple-websocket==1.1.0
+six==1.17.0
+stevedore==5.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
