--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,3 +96,4 @@ jobs:
       run: |
         # aqui colocan el comando de prueba testing
         pytest tests/unitarias
+        pytest tests/security
