--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,4 +96,4 @@ jobs:
       run: |
         # aqui colocan el comando de prueba testing
         pytest tests/unitarias
-        pytest tests/security/security_justificacion_services.py
+        pytest tests/security
