--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,4 +96,4 @@ jobs:
       run: |
         # aqui colocan el comando de prueba testing
         pytest tests/unitarias -v
-        pytest -s tests\rendimiento\test_rendimiento.py
+        pytest -q tests/seguridad/test_seguridad_departamento.py
