--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,3 +96,39 @@ jobs:
       run: |
         # aqui colocan el comando de prueba testing
         pytest src/test_perfil_acceso.py
+
+    - name: Ejecutar pruebas de carga con Locust
+      env:
+        DB_HOST: 127.0.0.1
+        DB_USER: ${{ secrets.MYSQL_USER }}
+        DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
+      run: |
+        mkdir -p output
+        locust -f tests/test_rendimiento.py -u 150 -r 10 --run-time 1m0s --csv=output/resultados
+
+    - name: Verificar errores en Locust
+      run: |
+        if [ -f output/resultados_failures.csv ] && grep -q '[1-9]' output/resultados_failures.csv; then
+          echo "❌ Se encontraron errores durante la prueba de carga."
+          cat output/resultados_failures.csv
+          exit 1
+        else
+          echo "✅ No se encontraron errores en la prueba de carga."
+        fi
+
+    - name: Validar rendimiento (tiempo promedio)
+      run: |
+        avg_response_time=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
+        echo "⏱ Tiempo promedio de 'Insertar Perfil': $avg_response_time ms"
+        if (( $(echo "$avg_response_time > 500" | bc -l) )); then
+          echo "❌ El tiempo de respuesta promedio supera el umbral permitido (500 ms)"
+          exit 1
+        fi
+
+    - name: Guardar resultados de Locust
+      uses: actions/upload-artifact@v3
+      with:
+        name: resultados-locust
+        path: output/
+
