cambios test locust

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,7 @@ jobs:
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
         # aqui colocan el comando de prueba testing
-        pytest src/test_perfil_acceso.py
+        pytest tests/test_perfil_acceso.py
 
     - name: Ejecutar pruebas de carga con Locust
       env:
