cambios he integracion

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -132,21 +132,12 @@ jobs:
       with:
         name: resultados-locust
         path: output/
-    # Si los tests pasaron y estamos en una de las ramas de trabajo,
-    # fusionamos automáticamente en main
-    - name: Auto-merge to main
-      if: >
-        success() &&
-        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/DEVJAVIER-QA')
-      uses: actions/github-script@v6
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const branch = context.ref.replace('refs/heads/', '');
-          console.log(Merging '${branch}' into 'main'…);
-          await github.rest.repos.merge({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            base: 'main',
-            head: branch
-          });
+      script: |
+        const branch = context.ref.replace('refs/heads/', '');
+        console.log(`Merging '${branch}' into 'main'...`);
+        await github.rest.repos.merge({
+          owner: context.repo.owner,
+          repo: context.repo.repo,
+          base: 'main',
+          head: branch
+        });
