--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,110 @@
+altgraph==0.17.4
+annotated-types==0.7.0
+anyio==4.9.0
+Authlib==1.6.0
+bandit==1.8.3
 bcrypt==4.3.0
+bidict==0.23.1
+blinker==1.9.0
+boolean.py==5.0
+Brotli==1.1.0
+CacheControl==0.14.3
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.8
+colorama==0.4.6
+ConfigArgParse==1.7.1
+coverage==7.8.2
+cryptography==45.0.3
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
+dparse==0.6.4
+et_xmlfile==2.0.0
+filelock==3.16.1
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-Login==0.6.3
 fpdf==1.7.2
+future==1.0.0
+gevent==25.5.1
+geventhttpclient==2.3.3
+greenlet==3.2.3
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+iniconfig==2.1.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.1
+license-expression==30.4.1
 locust==2.37.10
+locust-cloud==1.23.1
+lxml==5.3.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==4.0.0
+mdurl==0.1.2
+msgpack==1.1.0
 mysql-connector-python==9.2.0
+nltk==3.9.1
 openpyxl==3.1.5
+packageurl-python==0.17.1
+packaging==25.0
+pbr==6.1.1
+pefile==2023.2.7
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
+platformdirs==4.3.8
+pluggy==1.6.0
+psutil==6.1.1
+py-serializable==2.0.0
+pycparser==2.22
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.19.1
 pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.4
+pyparsing==3.2.3
 PySide6==6.8.3
+PySide6_Addons==6.8.3
+PySide6_Essentials==6.8.3
 pytest==8.4.0
 pytest-cov==6.1.1
 pytest-mock==3.14.1
 pytest-qt==4.4.0
 python-docx==1.1.2
+python-engineio==4.12.2
+python-socketio==5.13.0
+pywin32==310
+pywin32-ctypes==0.2.3
+PyYAML==6.0.2
 pyzk==0.9
+pyzmq==26.4.0
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+safety-schemas==0.0.14
+setuptools==80.9.0
+shellingham==1.5.4
+shiboken6==6.8.3
+simple-websocket==1.1.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+stevedore==5.4.1
+tenacity==9.1.2
+toml==0.10.2
+tomlkit==0.13.3
+tqdm==4.67.1
+typer==0.16.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
