--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         pytest tests/unitarias/test_perfil_acceso.py
         pytest tests/seguridad/test_perfil_acceso_vulnerabilidad.py
         #xvfb-run -a pytest tests/gui/test_perfil_acceso_gui.py
-        xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
+        #xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
 
 
     - name: Ejecutar pruebas de carga con Locust
