--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -98,7 +98,7 @@ jobs:
         pytest tests/unitarias/test_perfil_acceso.py
         pytest tests/seguridad/test_perfil_acceso_vulnerabilidad.py
         #xvfb-run -a pytest tests/gui/test_perfil_acceso_gui.py
-        #xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
+        xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
 
 
     - name: Ejecutar pruebas de carga con Locust
@@ -130,15 +130,23 @@ jobs:
           echo "❌ El tiempo de respuesta promedio supera el umbral permitido (500 ms)"
           exit 1
         fi
-
     - name: Guardar resultados de Locust
       uses: actions/upload-artifact@v4
       with:
         name: resultados-locust
         path: output/
+    # Si los tests pasaron y estamos en una de las ramas de trabajo,
+    # fusionamos automáticamente en main
+    - name: Auto-merge to main
+      if: >
+        success() &&
+        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/DEVJAVIER-QA')
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const branch = context.ref.replace('refs/heads/', '');
-          console.log(`Merging '${branch}' into 'main'...`);
+          console.log(Merging '${branch}' into 'main'…);
           await github.rest.repos.merge({
             owner: context.repo.owner,
             repo: context.repo.repo,
