--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,11 @@ on:
       - Gonzalo
       - Javier
       - Yeiler
+      - Maikel
   pull_request:
     branches:
       - main
   workflow_dispatch: {}
-
-permissions:
-  contents: write
-  pull-requests: write
 
 jobs:
   build-and-test:
@@ -75,7 +72,7 @@ jobs:
         DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
-        DB_BACKUP_FILE="backup/accesobiometrico_v5.1.sql"
+        DB_BACKUP_FILE="backup/accesobiometrico_v5.0.sql"
         
         if [ ! -f "$DB_BACKUP_FILE" ]; then
           echo "Error: El archivo de backup SQL '$DB_BACKUP_FILE' no se encontró en el repositorio."
@@ -93,7 +90,7 @@ jobs:
         DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
       run: |
         pytest tests/unitarias
-        pytest tests/security
+        pytest tests/seguridad
 
     - name: Ejecutar pruebas de carga con Locust
       env:
@@ -133,33 +130,45 @@ jobs:
   merge-and-deploy:
     needs: build-and-test
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-      deployments: write
+    if: github.ref == 'refs/heads/main' || success()
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: 'main'
-        token: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Auto-merge to main
-      if: >
-        success() &&
-        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/Javier' || github.ref == 'refs/heads/Yeiler')
+    - name: Merge automático Yeiler a MAIN
+      if: success()
       uses: actions/github-script@v6
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
-          const branch = context.ref.replace('refs/heads/', '');
-          console.log(`Merging '${branch}' into 'main'…`);
-          await github.rest.repos.merge({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            base: 'main',
-            head: branch
-          });
+          try {
+            await github.rest.pulls.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: 'Merge automático Yeiler a MAIN',
+              head: 'DEV-QA',
+              base: 'main',
+              body: 'Merge automático después de pruebas exitosas',
+              maintainer_can_modify: true
+            });
+            
+            // Aprobar el pull request automáticamente
+            const pulls = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open',
+              head: 'DEV-QA',
+              base: 'main'
+            });
+            
+            if (pulls.data.length > 0) {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: pulls.data[0].number
+              });
+            }
+          } catch (error) {
+            console.error('Error en merge automático:', error);
+            core.setFailed('Falló el merge automático');
+          }
 
     - name: Enviar correo de éxito
       if: success()
@@ -170,27 +179,20 @@ jobs:
         username: ${{ secrets.EMAIL_USER }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         subject: '✅ Éxito en CI/CD - Merge completado'
-        body: 'Las pruebas fueron exitosas y el merge de DEV-QA a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
+        body: 'Las pruebas fueron exitosas y el merge de Maikel a MAIN se completó correctamente.\n\nDetalles del workflow: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}'
         to: ${{ secrets.NOTIFICATION_EMAIL }}
         from: GitHub Actions
         content_type: text/plain
 
-    - name: Preparar archivos para despliegue
-      run: |
-        mkdir -p deploy
-        cp -r src/ deploy/
-        cp requirements.txt deploy/
-        # Agrega aquí otros archivos necesarios para producción
-
     - name: Desplegar a producción via FTP
-      uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+      if: success()
+      uses: SamKirkland/FTP-Deploy-Action@4.3.4
       with:
         server: ${{ secrets.FTP_SERVER }}
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./deploy/
         server-dir: ${{ secrets.FTP_REMOTE_DIR }}
-        dangerous-clean-slate: true
 
   notify-failure:
     needs: build-and-test
@@ -215,3 +217,23 @@ jobs:
         to: ${{ secrets.NOTIFICATION_EMAIL }}
         from: GitHub Actions
         content_type: text/plain
+
+  # Si los tests pasaron y estamos en una de las ramas de trabajo,
+  # fusionamos automáticamente en main
+    - name: Auto-merge to main
+      if: >
+        success() &&
+        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/Maikel' ||
+         github.ref == 'refs/heads/Javier' || github.ref == 'refs/heads/Yeiler')
+      uses: actions/github-script@v6
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const branch = context.ref.replace('refs/heads/', '');
+          console.log(Merging '${branch}' into 'main'…);
+          await github.rest.repos.merge({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            base: 'main',
+            head: branch
+          });
