--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,3 @@
-# .github/workflows/main.yml
 name: Pruebas Python
 
 on:
@@ -14,7 +13,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    
+
     # --- CONFIGURACIÓN DEL SERVICIO MYSQL ---
     services:
       mysql:
@@ -98,39 +97,16 @@ jobs:
         pytest tests/unitarias/test_perfil_acceso.py
         pytest tests/seguridad/test_perfil_acceso_vulnerabilidad.py
         #xvfb-run -a pytest tests/gui/test_perfil_acceso_gui.py
+        #xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
         xvfb-run -a bash -c "sleep 2 && pytest tests/gui/test_perfil_acceso_gui.py"
 
 
     - name: Ejecutar pruebas de carga con Locust
-      env:
-        DB_HOST: 127.0.0.1
-        DB_USER: ${{ secrets.MYSQL_USER }}
-        DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        DB_DATABASE: ${{ secrets.MYSQL_DATABASE }}
-      run: |
-        mkdir -p output
-        # aqui  colocan el comando de prueba de carga de locus con su archivo
-        locust -f tests/test_rendimiento_perfil.py --headless -u 150 -r 10 --run-time 1m30s --csv=output/resultados
-
-    - name: Verificar errores en Locust
-      run: |
-        if [ -f output/resultados_failures.csv ] && grep -q '[1-9]' output/resultados_failures.csv; then
-          echo "❌ Se encontraron errores durante la prueba de carga."
-          cat output/resultados_failures.csv
-          exit 1
-        else
-          echo "✅ No se encontraron errores en la prueba de carga."
-        fi
-
-    - name: Validar rendimiento (tiempo promedio)
-      run: |
-        avg_response_time=$(awk -F',' '$1 ~ /Insertar Perfil/ {print $5}' output/resultados_stats.csv | tail -n1)
-        echo "⏱ Tiempo promedio de 'Insertar Perfil': $avg_response_time ms"
-        if (( $(echo "$avg_response_time > 500" | bc -l) )); then
           echo "❌ El tiempo de respuesta promedio supera el umbral permitido (500 ms)"
           exit 1
         fi
-        - name: Guardar resultados de Locust
+
+    - name: Guardar resultados de Locust
       uses: actions/upload-artifact@v4
       with:
         name: resultados-locust
@@ -146,6 +122,7 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const branch = context.ref.replace('refs/heads/', '');
+          console.log(`Merging '${branch}' into 'main'...`);
           console.log(Merging '${branch}' into 'main'…);
           await github.rest.repos.merge({
             owner: context.repo.owner,
