--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
       - main
       - Gonzalo
       - DEVJAVIER-QA
+      - Yeiler
+      - Maikel
     
 
   workflow_dispatch: {} 
@@ -142,16 +144,27 @@ jobs:
     - name: Auto-merge to main
       if: >
         success() &&
-        (github.ref == 'refs/heads/Gonzalo' || github.ref == 'refs/heads/DEVJAVIER-QA')
+        (
+          github.ref == 'refs/heads/Gonzalo' ||
+          github.ref == 'refs/heads/DEVJAVIER-QA' ||
+          github.ref == 'refs/heads/Yeiler' ||
+          github.ref == 'refs/heads/Maikel'
+        )
       uses: actions/github-script@v6
+      continue-on-error: true
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         script: |
           const branch = context.ref.replace('refs/heads/', '');
-          console.log(Merging '${branch}' into 'main'…);
-          await github.rest.repos.merge({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            base: 'main',
-            head: branch
-          });
+          try {
+            console.log(`Merging '${branch}' into 'main'…`);
+            await github.rest.repos.merge({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              base: 'main',
+              head: branch
+            });
+            console.log(`✅ Merge ${branch} → main OK`);
+          } catch (error) {
+            console.log('⚠️ Merge conflict:', error.message);
+          }
